[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://hud/HUD.gd" type="Script" id=2]
[ext_resource path="res://hud/coin_gold.png" type="Texture" id=3]
[ext_resource path="res://hud/deadline(1).png" type="Texture" id=4]
[ext_resource path="res://assets/flappyfont.TTF" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 55
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.956863, 0.47451, 0.00784314, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.752941, 0.513726, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.588496, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -99.5
margin_right = 512.0
margin_bottom = -48.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_constants/shadow_as_outline = 1
text = "Best: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
custom_constants/shadow_as_outline = 1
text = "Treasure Hunt "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -126.0
margin_top = -138.0
margin_right = 126.0
margin_bottom = -60.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = " Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_left = 9.19067
margin_top = 10.0
margin_right = 9.19067
margin_bottom = 92.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 82.0

[node name="Coin" type="TextureRect" parent="MarginContainer/Score"]
margin_right = 61.0
margin_bottom = 72.0
texture = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="MarginContainer/Score"]
margin_left = 65.0
margin_top = 13.0
margin_right = 95.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
text = "0"

[node name="Time" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 82.0
alignment = 2

[node name="Coin" type="TextureRect" parent="MarginContainer/Time"]
margin_left = 906.0
margin_right = 970.0
margin_bottom = 72.0
texture = ExtResource( 4 )

[node name="TimeLabel" type="Label" parent="MarginContainer/Time"]
margin_left = 974.0
margin_top = 13.0
margin_right = 1004.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
text = "0"
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
